k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-frontend
  namespace: demo-app
  labels:
    app: react-app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app-frontend
  template:
    metadata:
      labels:
        app: react-app-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/brajadbi360/react-app-frontend:sha-3238c0045faf59a801a0979c26f173d206c0dbd8
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
