k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-frontend
  namespace: demo-app
  labels:
    app: react-app-frontend
spec:
  selector:
    app: react-app-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
