k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app
  namespace: demo-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: react-app.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: react-app-frontend
                port:
                  number: 80
